--- a/index.html
+++ b/index.html
@@ -9,6 +9,26 @@
     <title>SpaceX</title>
   </head>
   <body>
+    <div id="overlay"></div>
+    <div id="mobile-menu" class="mobile-main-menu">
+      <ul>
+        <li><a href="#">Mission</a></li>
+        <li><a href="#">Launches</a></li>
+        <li><a href="#">Careers</a></li>
+        <li><a href="#">Updates</a></li>
+        <li><a href="#">Shop</a></li>
+
+        <li class="mobile-only"><a href="falcon9.html">Falcon 9</a></li>
+        <li class="mobile-only">
+          <a href="falcon-heavy.html">Falcon Heavy</a>
+        </li>
+        <li class="mobile-only"><a href="dragon.html">Dragon</a></li>
+        <li class="mobile-only"><a href="#">Starship</a></li>
+        <li class="mobile-only"><a href="#">Human Spaceflight</a></li>
+        <li class="mobile-only"><a href="#">Rideshare</a></li>
+        <li class="mobile-only"><a href="#">Starlink</a></li>
+      </ul>
+    </div>
     <header class="main-header">
       <div class="logo">
         <a href="index.html">
@@ -160,5 +180,18 @@
         </a>
       </div>
     </section>
+
+    <footer>
+      <ul>
+        <li>SpaceX &copy; 2023</li>
+        <li><a href="#">Twitter</a></li>
+        <li><a href="#">YouTube</a></li>
+        <li><a href="#">Instagram</a></li>
+        <li><a href="#">Flickr</a></li>
+        <li><a href="#">LinkedIn</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Suppliers</a></li>
+      </ul>
+    </footer>
   </body>
 </html>
